# poppy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: BENCHMARKS.md
mcpb/: manifest.json
mcpb/server/: main.py
src/poppy/: __init__.py  build_mcpb.py  config.py  conflict_detection.py  consolidation.py  db.py  errors.py  lifecycle.py  models.py  runtime.py  sources.py  telemetry.py
src/poppy/capture/: __init__.py  _state.py  banner.py  cadence.py  journal.py  lock.py  policy.py  reconciler.py  watermark.py  window.py
src/poppy/cli/: hooks.py  main.py
src/poppy/engine/: __init__.py  _model_cache.py  _st_loader.py  bloom.py  interface.py  migration.py  registry.py  seed.py  sprout.py
src/poppy/integrations/: claude_memory_import.py  hermes_memory_import.py
src/poppy/mcp_server/: server.py
src/poppy/setup/: claude_code.py  goose.py  hermes.py  trags.py
src/poppy/sync/: __init__.py  auto.py  client.py  serializer.py  state.py
src/poppy/ui/: __init__.py  server.py  tombstones.py
src/poppy/ui/static/: app.js  index.html  styles.css
tests/: conftest.py  test_build_mcpb.py  test_claude_memory_import.py  test_cli.py  test_cli_since.py  test_cli_telemetry.py  test_config.py  test_conflict_detection.py  test_consolidation.py  test_db.py  test_engine_bloom.py  test_engine_migration.py  test_engine_registry.py  test_engine_seed.py  test_engine_sprout.py  test_engine_st_loader.py  test_hooks.py  test_lifecycle.py  test_mcp_server.py  test_models.py  test_setup_claude_code.py  test_setup_goose.py  test_setup_hermes.py  test_setup_trags.py  test_sources.py  test_telemetry.py  test_ui_lifecycle.py  test_version.py
tests/capture/: test_banner.py  test_cadence.py  test_capture_worker.py  test_consent_cli.py  test_lock.py  test_policy.py  test_reconciler.py  test_sessionend_window.py  test_watermark.py  test_window.py
